# azure-osconfig

./: .gitignore  .gitmodules  README.md
.github/actions/check-logs/: action.yml
.github/actions/check-run/: action.yml
.github/actions/publish-package/: action.yml
.github/workflows/: build-containers.yml  build-package.yml  ci.yml  deploy-github-main.yml  e2etest-provision-hosts.yml  nightly.yml  package.yml  publish-package.yml  release.yml  test.yml
devops/debian/: postinst
devops/docker/marinerv1-amd64/: Dockerfile
devops/e2e/: github-main.json
devops/pipeline/: binary_package.yaml  create_containers.yaml  e2etest-baremetal.yaml  e2etest.yaml  source_packaging.yaml
devops/pipeline/stages/: binary_build.yaml  binary_signing.yaml  create_container.yaml  e2etest_baremetal.yaml
devops/terraform/host/: GenericRunnerHost.tf  OSConfigHost.tf  variables.tf
src/: CMakeLists.txt
src/cmake/templates/: osconfig.nosource.spec.in  osconfig.spec.in
src/modules/: CMakeLists.txt
src/modules/cmake/: GenerateModule.cmake
src/modules/cmake/templates/: Log.cpp.in  Log.h.in  Module.cpp.in
src/modules/commandrunner/src/: CMakeLists.txt  Command.cpp  Command.h  CommandRunner.cpp  CommandRunner.h
src/modules/test/: CMakeLists.txt  MimParser.cpp  MimParser.h  RecipeInvoker.cpp
src/modules/test/src/: CMakeLists.txt  MimParser.cpp  MimParser.h
src/modules/tools/: Module.h
src/platform/: Cargo.toml
src/platform/modulesmanager/tests/ModuleManagerTests/src/: ModulesManagerTests.cpp
src/platform/src/: api.rs  main.rs
src/tests/e2etest/: E2ETest.cs
(+7 files in other folders)
